--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     </ul>
 
     <footer>
-        <p>&copy; 2025 Vulnerable API Learning. All rights reserved.</p>
+        <p>&copy; 2025 Networking & Cyber Security Department of Creative IT Institute . All rights reserved.</p>
     </footer>
 </body>
 </html>
